*Empty MediaWiki Message*

--- a/Kongo.mw
+++ b/Kongo.mw
@@ -1,5 +1,3 @@
-abcd
-
-* [[Kongo-Brazzaville]] (''République du Congo'', ex Congo français)
-* [[Kongo-Kinshasa]] (''République Démocratique du Congo'', ex Zaïre, ex Congo belge)
-* [[Kongo (ebale]])
+* Kongo Brazzaville (République du Congo, ex Congo français))
+* Kongo Kinshasa (République Démocratique du Congo, ex Zaïre, ex Congo belge)
+* Kongo (ebale)
