--- a/Lingála.mw
+++ b/Lingála.mw
@@ -1,1 +1,4 @@
+<div style="position:relative;visibility:hidden">---Sidenote START---</div>
+[[Image:Lingala.jpg|thumb|right|description]]
+
 '''Lingala''' ezali lokótá na bato na [[Kongo]].
