*Empty MediaWiki Message*

--- a/Nkɔ́si.mw
+++ b/Nkɔ́si.mw
@@ -1,2 +1,2 @@
-[[image:Loewe-painting.jpg|thumb|frame|right|Kenia; in: Brehms Tierleben, 1927]]
-[[image:Lightmatter_lioness.jpg|thumb|frame|right|Nkosi]]
+[[image:Loewe-painting.jpg|thumb|180px|right|Kenia; in: Brehms Tierleben, 1927]]
+[[image:Lightmatter_lioness.jpg|thumb|180px|right|Nkosi]]
