*Empty MediaWiki Message*

--- a/Nkɔ́li.mw
+++ b/Nkɔ́li.mw
@@ -1,1 +1,25 @@
 [[image:Krokodile.png|thumb|180px|right|Nkoli (crocodilus niloticus); in: Meyers Großes Konversationslexikon, 1905-09]]
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+[[Category:Niama]]
