--- a/Nkɔ́si.mw
+++ b/Nkɔ́si.mw
@@ -1,2 +1,8 @@
 [[image:Loewe-painting.jpg|thumb|180px|right|Kenia; in: Brehms Tierleben, 1927]]
 [[image:Lightmatter_lioness.jpg|thumb|180px|right|Nkosi]]
+
+
+
+
+
+[[Category:Niama]]
