*Empty MediaWiki Message*

--- a/Nyama.mw
+++ b/Nyama.mw
@@ -1,5 +1,9 @@
-Liste des animaux
+Ici manque un article sur les animaux en générale.
 
+----
+
+La liste des animaux n'est que temporairement ici. Elle sera éffacé d'ici peu. La liste n'est que pour que vous puissiez créer des articles sur les animaux ci-dessous.
+* Veuillez ajouter à la fin de votre article sur an animal la catégorie (Lien: Category:Niama)
 
 == L ==
 [[lisweswe]]
@@ -25,3 +29,7 @@ Liste des animaux
 [[nzale]]
 [[nzoi]]
 [[nzoku]]
+
+
+
+[[Category:Niama]]
