*Empty MediaWiki Message*

--- a/Mbuma.mw
+++ b/Mbuma.mw
@@ -1,5 +1,9 @@
+Ici manque un article sur les fruits en générale.
 
+----
 
+La liste des fruits n'est que temporairement ici. Elle sera éffacé d'ici peu. La liste n'est que pour que vous puissiez créer des articles sur les fruits ci-dessous.
+* Veuillez ajouter à la fin de votre article sur un fruit la catégorie (Lien: Category:Mbumba)
 
 == A ==
 [[ananasi]]
