--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -110,3 +110,5 @@ Na mboka misusu mbiye ekopesa moto bokasi na 40%.
 '''Bikela esali mpe lokola ndako ya minganga.'''
 * Nkisi lokola ilulumba esalisa bokono bwa pulu pulu, esilisa mokosa, bokono ya ndeke mpe kosukosu. Esengeli toyeba. Mayele ya banganga nkisi ya Balele etangi banzete 123. Bosalisi ya banganga ya Baluba esengi mingi banzembo.
 * Babenga kombo Bambuti mpe Baife baye bavandi na zamba Ituri bazali na bikela bya bango. Bambuti bayebi banyama ya koleka kama mibale, mpe banzete ya koleka kama moko. Bakoboma nyama na basinga. Kasi Baife, bakobenga mpe bakoboma nyama na mbanzi mpe na makonga.
+
+[[Category:Afrika]]
