--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -113,4 +113,4 @@ Na mboka misusu mbiye ekopesa moto bokasi na 40%.
 
 [[Category:Afrika]]
 
-[[da:Demokratiske Republik Congo]] [[de:Demokratische Republik Kongo]] [[en:Democratic Republic of the Congo]] [[es:República Democrática del Congo]] [[eo:Kongo Kinŝasa]] [[et:Kongo Demokraatlik Vabariik]] [[fr:République démocratique du Congo]] [[it:Repubblica Democratica del Congo]] [[lt:Kongo Demokratin&#279; Respublika]] [[ln:Kongo-Kinshasa]] [[lv:Kongo DR]] [[ms:Republik Demokratik Congo]] [[nds:Demokraatsche Republiek Kongo]] [[nl:Democratische Republiek Congo]] [[ja:コンゴ民主共和国]] [[no:Kongo]] [[pl:Demokratyczna Republika Konga]] [[pt:República Democrática do Congo]] [[ru:Конго, Демократическая Республика]] [[sl:Demokratična republika Kongo]] [[sv:Demokratiska republiken Kongo]] [[zh-cn:刚果民主共和国]]
+[[da:Demokratiske Republik Congo]] [[de:Demokratische Republik Kongo]] [[en:Democratic Republic of the Congo]] [[es:República Democrática del Congo]] [[eo:Kongo Kinŝasa]] [[et:Kongo Demokraatlik Vabariik]] [[fr:République démocratique du Congo]] [[it:Repubblica Democratica del Congo]] [[lt:Kongo Demokratin&#279; Respublika]] [[lv:Kongo DR]] [[ms:Republik Demokratik Congo]] [[nds:Demokraatsche Republiek Kongo]] [[nl:Democratische Republiek Congo]] [[ja:コンゴ民主共和国]] [[no:Kongo]] [[pl:Demokratyczna Republika Konga]] [[pt:República Democrática do Congo]] [[ru:Конго, Демократическая Республика]] [[sl:Demokratična republika Kongo]] [[sv:Demokratiska republiken Kongo]] [[zh-cn:刚果民主共和国]]
