--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -49,14 +49,11 @@
 
 == Lakótá ==
 
-Na ekolo Kongo elobami [[lakótá|bakota]] kama mibale. Nyoso wana elakisi boyebi bwa bato ya bomengo etondi mabele. [[Tshiluba]], [[kikongo]], [[lingala]] mpe [[kiswahili]] ezali bakota banene banei ya ekolo, kasi bakota kama mibale balobaka na ekolo Kongo.
+Na ekolo Kongo elobami [[lakótá|bakota]] kama mibale. Nyoso wana elakisi boyebi bwa bato ya bomengo etondi mabele. [[Tshiluba]], [[kikongo]], [[lingala]] mpe [[swahili]] ezali bakota banene banei ya ekolo, kasi bakota kama mibale balobaka na ekolo Kongo.
 
 Mingi se na kati ya bakota bya ekolo bokoyeba etando ya bikela, mabele, banyama mpe banzete.
 
 [[Mongo|Bamongo]] bazali na bakombo mingi ya nzete ya mbila na maye manso basalelaka. Solo, nzete ya mbila eyebani kaka mpona mafuta na masanga te. Eyebani lokola nkisi ekosilisa makono, naye mpe bakosala bitunga mpe bikila kila.
-
-
-
 
 == Démographie ==
 [[Image:Congo dem demographie.png|thumb|650px|left|Évolution de la démographie entre 1961 et 2002 (chiffre de la [[Organisation des Nations Unies pour l'alimentation et l'agriculture|FAO]], 2004). Population en milliers d'habitants.]]
