*Empty MediaWiki Message*

--- a/Lokótá.mw
+++ b/Lokótá.mw
@@ -8,6 +8,7 @@ Cette liste temporaire vous permet l'accès aux articles suivants pour les crée
 * [[lingala]] 
 * [[kikongo]] 
 * [[swahili]]
+* [[tshiluba]]
 
 ----
 
