--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -11,7 +11,7 @@
 |-----
 | align="center" colspan="2" style="border-bottom:3px solid gray;" | <font size="-1">''[[Devise]] nationale : Sans''</font>
 |-----
-| align="center" colspan="2" | [[image:LocationDRCongo.png]]
+| align="center" colspan="2" | [[image:LocationDRCongo.png|200px|]]
 |-----
 | [[Langue officielle]] || [[Langue française|français]]
 |-----
