--- a/Nkɔ́li.mw
+++ b/Nkɔ́li.mw
@@ -1,25 +1,5 @@
 [[image:Krokodile.png|thumb|180px|right|Nkoli (crocodilus niloticus); in: Meyers Großes Konversationslexikon, 1905-09]]
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+'''Nkoli''', '''ngandó''', ezali [[nyama]] ya [[ebale]].
 
 
 [[Category:Niama]]
