*Empty MediaWiki Message*

--- a/Lokótá.mw
+++ b/Lokótá.mw
@@ -5,7 +5,7 @@ Ici manque un article général sur les langues
 ----
 Cette liste temporaire vous permet l'accès aux articles suivants pour les créer ou les améliorer. Elle sera effacé le moment donné.
 
-* [[lingala]] 
+* [[lingála]] 
 * [[kikongo]] 
 * [[swahili]]
 * [[tshiluba]]
