*Empty MediaWiki Message*

--- a/Lingála.mw
+++ b/Lingála.mw
@@ -1,7 +1,7 @@
 <div style="position:relative;visibility:hidden">---Sidenote START---</div>
 [[Image:Lingala.jpg|thumb|right|description]]
 
-'''Lingala''' ezali [[lokótá]] na bato na [[Kongo]].
+'''Lingála''' ezali [[lokótá]] na bato na [[Kongo]].
 
 
 
