*Empty MediaWiki Message*

--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -18,11 +18,11 @@
 | Langues nationales  
 | [[lingala]], [[swahili]],<br />[[tshiluba]], [[kikongo]]
 |-----
-| [[Capitale]] || [[Kinshasa]]
+| [[mboka-mokonzi]] || [[Kinshasa]]
 |-----
 | [[Présidents de la République démocratique du Congo|Président]] || [[Joseph Kabila]]
 |-----
-| [[Superficie]] <br />&nbsp;- Totale <br />&nbsp;- % eau
+| [[Etando]] <br />&nbsp;- Totale <br />&nbsp;- % eau
 | [[Liste des pays par superficie|Classé 12{{e}}]]<br /> 2 345 410 [[kilomètre carré|km²]]<br /> 3.3%              
 |-----
 | [[Population]]<br />&nbsp;- Totale ([[Année]]) <br />&nbsp;- [[Densité de population|Densité]]
@@ -31,7 +31,7 @@
 | [[Indépendance]]<br />&nbsp;- Date
 | de la [[Belgique]]<br />[[30 juin]] [[1960]]
 |-----
-| [[Monnaie]] || [[Franc Congolais]]
+| [[Mfalánga]] || [[Franc Congolais]]
 |-----
 | [[Fuseau horaire]]  
 | [[Temps universel coordonné|UTC]] de +1 a +2
@@ -108,6 +108,6 @@ Na mboka misusu mbiye ekopesa moto bokasi na 40%.
 * Nkisi lokola ilulumba esalisa bokono bwa pulu pulu, esilisa mokosa, bokono ya ndeke mpe kosukosu. Esengeli toyeba. Mayele ya banganga nkisi ya Balele etangi banzete 123. Bosalisi ya banganga ya Baluba esengi mingi banzembo.
 * Babenga kombo Bambuti mpe Baife baye bavandi na zamba Ituri bazali na bikela bya bango. Bambuti bayebi banyama ya koleka kama mibale, mpe banzete ya koleka kama moko. Bakoboma nyama na basinga. Kasi Baife, bakobenga mpe bakoboma nyama na mbanzi mpe na makonga.
 
-[[Category:Afrika]]
+[[Category:Afrika]] [[Category:mbóka]]
 
-[[da:Demokratiske Republik Congo]] [[de:Demokratische Republik Kongo]] [[en:Democratic Republic of the Congo]] [[es:República Democrática del Congo]] [[eo:Kongo Kinŝasa]] [[et:Kongo Demokraatlik Vabariik]] [[fr:République démocratique du Congo]] [[it:Repubblica Democratica del Congo]] [[lt:Kongo Demokratin&#279; Respublika]] [[lv:Kongo DR]] [[ms:Republik Demokratik Congo]] [[nds:Demokraatsche Republiek Kongo]] [[nl:Democratische Republiek Congo]] [[ja:コンゴ民主共和国]] [[no:Kongo]] [[pl:Demokratyczna Republika Konga]] [[pt:República Democrática do Congo]] [[ru:Конго, Демократическая Республика]] [[sl:Demokratična republika Kongo]] [[sv:Demokratiska republiken Kongo]] [[zh-cn:刚果民主共和国]]
+[[de:Demokratische Republik Kongo]] [[en:Democratic Republic of the Congo]] [[es:República Democrática del Congo]] [[eo:Kongo Kinŝasa]] [[et:Kongo Demokraatlik Vabariik]] [[fr:République démocratique du Congo]] [[it:Repubblica Democratica del Congo]] [[nl:Democratische Republiek Congo]] [[pt:República Democrática do Congo]]
