*Empty MediaWiki Message*

--- a/Kiswahíli.mw
+++ b/Kiswahíli.mw
@@ -1,4 +1,4 @@
-'''Swahili''' ezali [[lokótá]] na bato na [[Kongo-Kinshasa|Kongo]].
+'''Kiswahili''' ezali [[lokótá]] na bato na [[Kongo-Kinshasa|Kongo]].
 
 
 
