--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -16,9 +16,9 @@
 | [[Langue officielle]] || [[Langue française|français]]
 |-----
 | Langues nationales  
-| [[lingala]], [[swahili]],<br />[[tshiluba]], [[kikongo]]
+| [[lingala]], [[kiswahili]],<br />[[tshiluba]], [[kikongo]]
 |-----
-| [[mboka-mokonzi]] || [[Kinshasa]]
+| [[Mboka-mokonzi]] || [[Kinshasa]]
 |-----
 | [[Présidents de la République démocratique du Congo|Président]] || [[Joseph Kabila]]
 |-----
@@ -49,7 +49,7 @@
 
 == Lakótá ==
 
-Na ekolo Kongo elobami [[lakótá|bakota]] kama mibale. Nyoso wana elakisi boyebi bwa bato ya bomengo etondi mabele. [[Tshiluba]], [[kikongo]], [[lingala]] mpe [[swahili]] ezali bakota banene banei ya ekolo, kasi bakota kama mibale balobaka na ekolo Kongo.
+Na ekolo Kongo elobami [[lakótá|bakótá]] kama mibale. Nyoso wana elakisi boyebi bwa bato ya bomengo etondi mabele. [[Tshiluba]], [[kikongo]], [[lingala]] mpe [[kiswahili]] ezali bakota banene banei ya ekolo, kasi bakota kama mibale balobaka na ekolo Kongo.
 
 Mingi se na kati ya bakota bya ekolo bokoyeba etando ya bikela, mabele, banyama mpe banzete.
 
