--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -49,7 +49,7 @@
 
 == Lakótá ==
 
-Na ekolo Kongo elobami [[lakótá|bakótá]] kama mibale. Nyoso wana elakisi boyebi bwa bato ya bomengo etondi mabele. [[Tshiluba]], [[kikongo]], [[lingala]] mpe [[kiswahili]] ezali bakota banene banei ya ekolo, kasi bakota kama mibale balobaka na ekolo Kongo.
+Na ekolo Kongo elobami [[lakótá|bakótá]] kama mibale. Nyoso wana elakisi boyebi bwa bato ya bomengo etondi mabele. [[Tshiluba]], [[kikongo]], [[lingála]] mpe [[kiswahili]] ezali bakota banene banei ya ekolo, kasi bakota kama mibale balobaka na ekolo Kongo.
 
 Mingi se na kati ya bakota bya ekolo bokoyeba etando ya bikela, mabele, banyama mpe banzete.
 
