*Empty MediaWiki Message*

--- a/Lokótá.mw
+++ b/Lokótá.mw
@@ -7,7 +7,7 @@ Cette liste temporaire vous permet l'accès aux articles suivants pour les crée
 
 * [[lingála]] 
 * [[kikongo]] 
-* [[swahili]]
+* [[kiswahili]]
 * [[tshiluba]]
 
 ----
