--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -1,5 +1,5 @@
 {| border="1" cellpadding="2" cellspacing="0" align="right" width="300px"
-|+ <font size="+1">'''République démocratique du Congo'''</font>
+|+ <font size="+1">'''Kongo Demokratiki'''</font>
 |-----
 | style="background:#efefef;" align="center" colspan="2" |
 {| border="0" cellpadding="2" cellspacing="0"
@@ -16,16 +16,16 @@
 | [[Langue officielle]] || [[Langue française|français]]
 |-----
 | Langues nationales  
-| [[lingala]], [[kiswahili]],<br />[[tshiluba]], [[kikongo]]
+| [[lingála]], [[kiswahili]],<br />[[tshiluba]], [[kikongo]]
 |-----
 | [[Mboka-mokonzi]] || [[Kinshasa]]
 |-----
-| [[Présidents de la République démocratique du Congo|Président]] || [[Joseph Kabila]]
+| [[Kongo Demokratiki (Tata-mokonzi)|Tata-mokonzi]] || [[Joseph Kabila]]
 |-----
-| [[Etando]] <br />&nbsp;- Totale <br />&nbsp;- % eau
+| [[Etando]] <br />&nbsp;- ekokí <br />&nbsp;- % mai
 | [[Liste des pays par superficie|Classé 12{{e}}]]<br /> 2 345 410 [[kilomètre carré|km²]]<br /> 3.3%              
 |-----
-| [[Population]]<br />&nbsp;- Totale ([[Année]]) <br />&nbsp;- [[Densité de population|Densité]]
+| [[Population]]<br />&nbsp;- ekokí ([[Année]]) <br />&nbsp;- [[Densité de population|Densité]]
 | [[Liste des pays par population|Classé 23{{e}}]]<br /> 55 225 478 habitants<br /> 24 hab./km²
 |-----
 | [[Indépendance]]<br />&nbsp;- Date
