*Empty MediaWiki Message*

--- a/Tatá-mokonzi_ya_Kɔ́ngɔ_Demokratiki.mw
+++ b/Tatá-mokonzi_ya_Kɔ́ngɔ_Demokratiki.mw
@@ -1,32 +1,32 @@
 [[en:Heads of State of the Democratic Republic of the Congo]]
 [[fr:Présidents_de_la_République_démocratique_du_Congo]]
 
-[[Catégorie:Homme politique congolais (Kinshasa)|*]]
+[[Categoriy:moto wa politiki (Kongo-Kinshasa)]]
 
 Ce tableau liste les chef d'État successifs de l'ancien Congo belge depuis son indépendance du [[Belgique|Royaume de Belgique]] le [[1 juillet|premier juillet]] [[1960]]. Les différents noms qu'a pu prendre le pays sont mentionnés.
 
 {|border="2" cellpadding="2" cellspacing="2"
-!Nom
+!Nkombo
 !Début du mandat
 !Fin du mandat
 !Parti
-!Note
+!Elembo
 |-
-| colspan="5" bgcolor=#5599cc | <center> [[Kongo (Kinshasa)|Kongo]] </center>
+| colspan="5" bgcolor=#5599cc | <center> [[Kongo-Kinshasa|Kongo]] </center>
 |-
 | [[Joseph Kasavubu]] || [[1 juillet|premier juillet]] [[1960]] || [[24 novembre]] [[1965]] ||  || renversé militairement par Mobutu
 |-
 | [[Mobutu Sese Seko|Joseph-Désiré Mobutu]] ||  [[25 novembre]] [[1965]] || [[1 juillet|premier juillet]] [[1966]] ||  ||
 |-
-|colspan="5" bgcolor=#5599cc | <center> [[Kongo (Kinshasa)|Kongo Demokratiki]] </center>
+|colspan="5" bgcolor=#5599cc | <center> [[Kongo-Kinshasa|Kongo Demokratiki]] </center>
 |-
 | [[Mobutu Sese Seko|Joseph-Désiré Mobutu]] || [[1 juillet|premier juillet]] [[1966]] || [[27 octobre]] [[1971]] ||  || 
 |-
-|colspan="5" bgcolor=#5599cc  | <center> [[Kongo (Kinshasa)|Zaïre]] </center>
+|colspan="5" bgcolor=#5599cc  | <center> [[Kongo-Kinshasa|Zaïre]] </center>
 |-
 | [[Mobutu Sese Seko]] || [[27 octobre]] [[1971]] || [[16 mai]] [[1997]] ||  || renversé alors qu'il était à l'étranger
 |-
-|colspan="5" bgcolor=#5599cc | <center> [[Kongo (Kinshasa)|Kongo Demokratiki]] </center>
+|colspan="5" bgcolor=#5599cc | <center> [[Kongo-Kinshasa|Kongo Demokratiki]] </center>
 |-
 | [[Laurent-Désiré Kabila]] || [[17 mai]] [[1997]] || [[29 mai]] [[1997]] || || à titre intérimaire
 |-
