*Empty MediaWiki Message*

--- a/Tatá-mokonzi_ya_Kɔ́ngɔ_Demokratiki.mw
+++ b/Tatá-mokonzi_ya_Kɔ́ngɔ_Demokratiki.mw
@@ -1,7 +1,7 @@
 [[en:Heads of State of the Democratic Republic of the Congo]]
 [[fr:Présidents_de_la_République_démocratique_du_Congo]]
 
-[[Categoriy:moto wa politiki (Kongo-Kinshasa)]]
+[[Category:moto wa politiki (Kongo-Kinshasa)]]
 
 Ce tableau liste les chef d'État successifs de l'ancien Congo belge depuis son indépendance du [[Belgique|Royaume de Belgique]] le [[1 juillet|premier juillet]] [[1960]]. Les différents noms qu'a pu prendre le pays sont mentionnés.
 
