--- a/Joseph_Kabila.mw
+++ b/Joseph_Kabila.mw
@@ -1,3 +1,3 @@
 [[category:Moto wa politiki (Kongo-Kinshasa)]]
 
-[[Image:Joseph Kabila.JPG|thumb|Description]]
+[[Image:Joseph Kabila.JPG|thumb|Joseph Kabila]]
