*Empty MediaWiki Message*

--- a/Joseph_Kasa-Vubu.mw
+++ b/Joseph_Kasa-Vubu.mw
@@ -1,2 +1,4 @@
 [[category:Moto wa politiki (Kongo-Kinshasa)]]
 [[Image:Joseph kasa-vubu.jpg|thumb|Joseph Kasa-Vubu]]
+
+(son premier ministre était [[Patrice Lumumba]])
