--- a/Joseph_Kasa-Vubu.mw
+++ b/Joseph_Kasa-Vubu.mw
@@ -1,4 +1,5 @@
 [[category:Moto wa politiki (Kongo-Kinshasa)]]
 [[Image:Joseph kasa-vubu.jpg|thumb|Joseph Kasa-Vubu]]
 
+Tata-mokonzi 01 07 1960 - 24 11 1965
 (son premier ministre était [[Patrice Lumumba]])
