--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -25,7 +25,7 @@
 | [[Etando]] <br />&nbsp;- ekokí <br />&nbsp;- % mai
 | [[Liste des pays par superficie|Classé 12{{e}}]]<br /> 2 345 410 [[kilomètre carré|km²]]<br /> 3.3%              
 |-----
-| [[Population]]<br />&nbsp;- ekokí ([[Année]]) <br />&nbsp;- [[Densité de population|Densité]]
+| [[Population]]<br />&nbsp;- ekokí ([[Mbúla]]) <br />&nbsp;- [[Densité de population|Densité]]
 | [[Liste des pays par population|Classé 23{{e}}]]<br /> 55 225 478 habitants<br /> 24 hab./km²
 |-----
 | [[Indépendance]]<br />&nbsp;- Date
