--- a/Politíki.mw
+++ b/Politíki.mw
@@ -4,8 +4,8 @@
 
 Ezalí na mitindo mingi ya politiki, mpe politiki ekabwaní nzela misato:
 
-=== kapitalisme ===
-Nzela ya liboso, politiki ya [[kapitalisme]] elingí mpo na basali te kasi mazalí mpo na bomongo ya bokulaka babéngaka bango bakapitaliste elingí koloba bakóló-bokulaka mosolo.
+=== kapitalismɛ ===
+Nzela ya liboso, politiki ya [[kapitalismɛ]] elingí koloba politiki wapi bokulaka mpe matomba ya mosala mazalí mpɔ na basali tɛ kasi mazalí mpɔ na bomongo ya bokulaka babéngaka bango bakapitalistɛ elingí koloba bakóló-bokulaka mosələ.
 
 === sosialisime ===
 Nzela ya mibale, [[sosialisime]] ezalí politiki ékopesa matomba ya mosala na maboro ya basali bangó moko mpe ékopekisa bokulaka ézala ya mwá liboke ya bato.
