--- a/Politíki.mw
+++ b/Politíki.mw
@@ -7,8 +7,8 @@ Ezalí na mitindo mingi ya politiki, mpe politiki ekabwaní nzela misato:
 === kapitalismɛ ===
 Nzela ya liboso, politiki ya [[kapitalismɛ]] elingí koloba politiki wapi bokulaka mpe matomba ya mosala mazalí mpɔ na basali tɛ kasi mazalí mpɔ na bomongo ya bokulaka babéngaka bango bakapitalistɛ elingí koloba bakóló-bokulaka mosələ.
 
-=== sosialisime ===
-Nzela ya mibale, [[sosialisime]] ezalí politiki ékopesa matomba ya mosala na maboro ya basali bangó moko mpe ékopekisa bokulaka ézala ya mwá liboke ya bato.
+=== sosialisimɛ ===
+Nzela ya mibale, [[sosialisimɛ]] ezalí politiki ékopesa matomba ya mosala na mabɔrɔ ya basali bangó mɔkɔ mpe ékopekisa bokulaka ézala ya mwá liboke ya bato.
 
 === komynisime ===
 Nzela ya misato, [[komynisime]] ezalí politiki ékosenga bokulaka mpe matomba ya mosala mázala mpo na bolamu ya lingomba, kasi ékopekisa bokulaka ya moto moko.
