*Empty MediaWiki Message*

--- a/Sosialisimɛ.mw
+++ b/Sosialisimɛ.mw
@@ -1,4 +1,3 @@
 [[category:lisangá]]
 
-=== sosialisimɛ ===
-Sosialisimɛ ezalí [[politiki]] ékopesa matomba ya mosala na mabɔrɔ ya basali bangó mɔkɔ mpe ékopekisa bokulaka ézala ya mwá liboke ya bato.
+'''Sosialisimɛ''' ezalí [[politiki]] ékopesa matomba ya mosala na mabɔrɔ ya basali bangó mɔkɔ mpe ékopekisa bokulaka ézala ya mwá liboke ya bato.
