*Empty MediaWiki Message*

--- a/Politíki.mw
+++ b/Politíki.mw
@@ -1,6 +1,6 @@
 [[category:lisangá]]
 
-'''Politiki''' ezalí bwanya ya koyangela makambo ma ekolo lokola mibeko mizalí kotinda; kobongisa bomoi ya bato, bizalela ya bangó; kotambwisa misala mia ekolo, mpe koyokana na bikolo bisusu; ezalí solondimbola ya politiki.
+'''Politiki''' ezalí bwanya ya koyangela makambo ma ekolo lokola mibeko mizalí kotinda; kobɔngisa bomɔi ya bato, bizalela ya bangó; kotambwisa misala mia ekolo, mpe koyokana na bikolo bisusu; ezalí sɔlɔ ndimbola ya politiki.
 
 Ezalí na mitindo mingi ya politiki, mpe politiki ekabwaní nzela misato:
 
@@ -10,5 +10,5 @@ Nzela ya liboso, politiki ya [[kapitalismɛ]] elingí koloba politiki wapi bokul
 === sosialisimɛ ===
 Nzela ya mibale, [[sosialisimɛ]] ezalí politiki ékopesa matomba ya mosala na mabɔrɔ ya basali bangó mɔkɔ mpe ékopekisa bokulaka ézala ya mwá liboke ya bato.
 
-=== komynisime ===
-Nzela ya misato, [[komynisime]] ezalí politiki ékosenga bokulaka mpe matomba ya mosala mázala mpo na bolamu ya lingomba, kasi ékopekisa bokulaka ya moto moko.
+=== komynisimɛ ===
+Nzela ya misato, [[komynisimɛ]] ezalí politiki ékosenga bokulaka mpe matomba ya mosala mázala mpɔ na bolamu ya lingomba, kasi ékopekisa bokulaka ya moto mɔkɔ.
