*Empty MediaWiki Message*

--- a/Sosialisimɛ.mw
+++ b/Sosialisimɛ.mw
@@ -1,3 +1,4 @@
 [[category:lisangá]]
+[[Image:Hw-marx.jpg|thumb|Karl Marx, 1818 - 1883]]
 
 '''Sosialisimɛ''' ezalí [[politiki]] ékopesa matomba ya mosala na mabɔrɔ ya basali bangó mɔkɔ mpe ékopekisa bokulaka ézala ya mwá liboke ya bato.
