*Empty MediaWiki Message*

--- a/Sosialisime.mw
+++ b/Sosialisime.mw
@@ -1,4 +1,1 @@
-[[category:lisangá]]
-[[Image:Hw-marx.jpg|thumb|Karl Marx, 1818 - 1883]]
-
-Sosialisime ezalí [[politiki]] ékopesa matomba ya mosala na maboro ya basali bangó moko mpe ékopekisa bokulaka ézala ya mwá liboke ya bato.
+#REDIRECT [[Sosialisimɛ]]
