*Empty MediaWiki Message*

--- a/Sidá.mw
+++ b/Sidá.mw
@@ -1,6 +1,6 @@
 '''Sida''' epesamaka na [[ngenge]].
 
-Ngenge oyo epasaka [[bokɔnɔ]] bwa sida elimbisaka bokasi bwa makila ya moto. Ntango ngenge ena ekoti na nzoto ya moto, ekoboma bakengeli ya makila. Mpo bango nde bapekisaka bokɔnɔ bokoto o nzoto ya moto. ''Kobele bokɔnɔ bwa sida'' elingi koloba te ngenge yango ekoti na nzoto ya moto mpe sima ya mikolo akobele.
+Ngenge oyo epasaka [[bokɔnɔ]] bwa sida elimbisaka bokasi bwa makila ya moto. Ntango ngenge ena ekoti na nzoto ya moto, ekoboma bakengeli ya makila. Mpo bango nde bapekisaka bokɔnɔ bokoto o nzoto ya moto. '''Kobele bokɔnɔ bwa sida''' elingi koloba te ngenge yango ekoti na nzoto ya moto mpe sima ya mikolo akobele.
 
 === Sida ebombanaka mbula mingi o kati ya nzoto ===
 Sima ya bokoteli bwa ngenge o nzoto, ekoki koleka mbula mingi liboso nzoto elaksi kobela. Yango wana, sima ya koyeba te ngenge ekoteli moto o nzoto, esengeli kokende noki komono [[móngana]].
