*Empty MediaWiki Message*

--- a/Sidá.mw
+++ b/Sidá.mw
@@ -1,4 +1,7 @@
-'''Sida''' epesamaka na [[ngenge]].
+[[category:bokɔnɔ]]
+[[Image:Sida-repartition.png|thumb|400px|Estimation de la répartition des personnes séropositives fin 2003]] 
+
+'''Sida''' ('''S'''yndrome d''''i'''mmuno'''d'''éficience '''a'''cquise) epesamaka na [[ngenge]].
 
 Ngenge oyo epasaka [[bokɔnɔ]] bwa sida elimbisaka bokasi bwa makila ya moto. Ntango ngenge ena ekoti na nzoto ya moto, ekoboma bakengeli ya makila. Mpo bango nde bapekisaka bokɔnɔ bokoto o nzoto ya moto. '''Kobele bokɔnɔ bwa sida''' elingi koloba te ngenge yango ekoti na nzoto ya moto mpe sima ya mikolo akobele.
 
