--- a/Bokɔnɔ.mw
+++ b/Bokɔnɔ.mw
@@ -5,7 +5,6 @@
 
 
 
-
 == 2. Bokɔnɔ bwa sida ==
 
 '''Maye mayebani'''
@@ -16,3 +15,5 @@ Eyebani ndenge ya boluki ngenge ya sida na nzoto ya moto.
 Eyebani ndenge ya kokitisa mpasi ya moto oyo abeli sida, ndenge ya kosalisa ya mpe kobakisa bomoyi bwa ye.
 
 Kasi eyebani te ndenge ya kosilisa to kolongola bokɔnɔ bwa sida na nzoto ya moto.
+
+[[category:Bokɔnɔ]]
