--- a/Kapitalismɛ.mw
+++ b/Kapitalismɛ.mw
@@ -1,3 +1,3 @@
 [[category:lisangá]]
 
-[[Politiki]] ya '''kapitalismɛ''' elingí koloba politiki wapi bokulaka mpe matomba ya mosala mazalí mpɔ na basali tɛ kasi mazalí mpɔ na bomongo ya bokulaka babéngaka bango bakapitalistɛ elingí koloba bakóló-bokulaka mosələ.
+[[Politiki]] ya '''kapitalismɛ''' elingí koloba politiki wapi bokulaka mpe matomba ya mosala mazalí mpɔ na basali tɛ kasi mazalí mpɔ na bomongo ya bokulaka babéngaka bango bakapitalistɛ elingí koloba bakóló-bokulaka mosala.
