--- a/Politíki.mw
+++ b/Politíki.mw
@@ -1,14 +1,55 @@
 [[category:lisangá]]
 
-'''Politiki''' ezalí bwanya ya koyangela makambo ma ekolo lokola mibeko mizalí kotinda; kobɔngisa bomɔi ya bato, bizalela ya bangó; kotambwisa misala mia ekolo, mpe koyokana na bikolo bisusu; ezalí sɔlɔ ndimbola ya politiki.
+'''Politiki''' ezalí bwányá ya koyángela [[likambo|makambo]] ma ekolo lokóla mibeko mizalí kotinda; kobɔngisa [[bomɔi]] ya [[moto|bato]], bizalela ya bangó; kotambwisa misala mia ekolo, mpe koyokana na bikolo bisusu; ezalí sɔlɔ ndimbola ya politiki.
 
 Ezalí na mitindo mingi ya politiki, mpe politiki ekabwaní nzela misato:
 
 === kapitalismɛ ===
-Nzela ya liboso, politiki ya [[kapitalismɛ]] elingí koloba politiki wapi bokulaka mpe matomba ya mosala mazalí mpɔ na basali tɛ kasi mazalí mpɔ na bomongo ya bokulaka babéngaka bango bakapitalistɛ elingí koloba bakóló-bokulaka mosələ.
+Nzela ya liboso, politiki ya [[kapitalismɛ]] elingí koloba politiki wapi bokulaka mpe matomba ya mosala mazalí mpɔ na basali tɛ kasi mazalí mpɔ na bomongo ya bokulaka babéngaka bango bakapitalistɛ elingí koloba bakóló-bokulaka mosɔlɔ.
 
 === sosialisimɛ ===
 Nzela ya mibale, [[sosialisimɛ]] ezalí politiki ékopesa matomba ya mosala na mabɔrɔ ya basali bangó mɔkɔ mpe ékopekisa bokulaka ézala ya mwá liboke ya bato.
 
 === komynisimɛ ===
 Nzela ya misato, [[komynisimɛ]] ezalí politiki ékosenga bokulaka mpe matomba ya mosala mázala mpɔ na bolamu ya lingomba, kasi ékopekisa bokulaka ya moto mɔkɔ.
+
+[[an:Politica]]
+[[ar:سياسة]]
+[[ast:Política]]
+[[bg:Политика]]
+[[bn:রাজনীতি]]
+[[bs:Politika]]
+[[ca:Política]]
+[[cs:Politika]]
+[[da:Politik]]
+[[de:Politik]]
+[[en:Politics]]
+[[eo:Politiko]]
+[[es:Política]]
+[[et:Poliitika]]
+[[fa:سیاست]]
+[[fi:Politiikka]]
+[[fr:Politique]]
+[[ga:Polaitíocht]]
+[[gl:Política]]
+[[he:פוליטיקה]]
+[[hr:Politika]]
+[[ia:Politica]]
+[[it:Politica]]
+[[ja:政治]]
+[[la:Politica]]
+[[lb:Politik]]
+[[ms:Politik]]
+[[nds:Politik]]
+[[nl:Politiek]]
+[[no:Politikk]]
+[[pl:Polityka]]
+[[pt:Política]]
+[[simple:Politics]]
+[[sv:Politik]]
+[[sw:Siasa]]
+[[th:การเมือง]]
+[[tl:Politika]]
+[[tr:Politika]]
+[[uk:Політика]]
+[[zh:政治学]]
