rv - DO NOT remove interwiki links

--- a/Politíki.mw
+++ b/Politíki.mw
@@ -4,18 +4,52 @@
 
 Ezalí na mitindo mingi ya politiki, mpe politiki ekabwaní nzela misato:
 
-=== kapitalismɛ ===
+=== Kapitalismɛ ===
 Nzela ya liboso, politiki ya [[kapitalismɛ]] elingí koloba politiki wapi bokulaka mpe matomba ya mosala mazalí mpɔ na basali tɛ kasi mazalí mpɔ na bomongo ya bokulaka babéngaka bango bakapitalistɛ elingí koloba bakóló-bokulaka mosɔlɔ.
 
-=== sosialisimɛ ===
+=== Sosialisimɛ ===
 Nzela ya mibale, [[sosialisimɛ]] ezalí politiki ékopesa matomba ya mosala na mabɔrɔ ya basali bangó mɔkɔ mpe ékopekisa bokulaka ézala ya mwá liboke ya bato.
 
-=== komynisimɛ ===
+=== Komynisimɛ ===
 Nzela ya misato, [[komynisimɛ]] ezalí politiki ékosenga bokulaka mpe matomba ya mosala mázala mpɔ na bolamu ya lingomba, kasi ékopekisa bokulaka ya moto mɔkɔ.
 
-[[fr:Politique]]
-[[sw:Siasa]]
+[[an:Politica]]
+[[ar:سياسة]]
+[[ast:Política]]
+[[bg:Политика]]
+[[bn:রাজনীতি]]
+[[bs:Politika]]
+[[ca:Política]]
+[[cs:Politika]]
+[[da:Politik]]
+[[de:Politik]]
 [[en:Politics]]
+[[eo:Politiko]]
+[[es:Política]]
+[[et:Poliitika]]
+[[fa:سیاست]]
+[[fi:Politiikka]]
+[[fr:Politique]]
+[[ga:Polaitíocht]]
+[[gl:Política]]
+[[he:פוליטיקה]]
+[[hr:Politika]]
+[[ia:Politica]]
+[[it:Politica]]
+[[ja:政治]]
+[[la:Politica]]
+[[lb:Politik]]
+[[ms:Politik]]
+[[nds:Politik]]
 [[nl:Politiek]]
+[[no:Politikk]]
+[[pl:Polityka]]
 [[pt:Política]]
 [[simple:Politics]]
+[[sv:Politik]]
+[[sw:Siasa]]
+[[th:การเมือง]]
+[[tl:Politika]]
+[[tr:Politika]]
+[[uk:Політика]]
+[[zh:政治学]]
