--- a/Kongo.mw
+++ b/Kongo.mw
@@ -1,3 +1,3 @@
-* Kongo Brazzaville (République du Congo, ex Congo français))
-* Kongo Kinshasa (République Démocratique du Congo, ex Zaïre, ex Congo belge)
-* Kongo (ebale)
+* [[Kongo-Brazzaville]] (République du Congo, ex République populaire du Congo, ex Congo français)
+* [[Kongo-Kinshasa]] (République Démocratique du Congo, ex Zaïre, ex Congo belge, ex État du Congo libre)
+* [[Kongo (ebale)]]
