*Empty MediaWiki Message*

--- a/Ciluba.mw
+++ b/Ciluba.mw
@@ -1,7 +1,13 @@
-'''Tshiluba''' ezali [[lokótá]] na bato na [[Kongo-Kinshasa|Kongo]].
+'''Tshiluba''' (tchiluba,  ciluba) ezali [[lokótá]] na bato na [[Kongo-Kinshasa|Kongo]].
 
 
 
+
+== Liens ==
+
+Centre de Recherche pour l'Instrumentalisation du Ciluba [http://cric.populus.org/]
+                                                                                  
+                                                                                 
 ----
 
 [[Category:Lokótá]]
