*Empty MediaWiki Message*

--- a/Ciluba.mw
+++ b/Ciluba.mw
@@ -5,9 +5,7 @@
 
 == Liens ==
 
-Centre de Recherche pour l'Instrumentalisation du Ciluba [http://cric.populus.org/]
+** Centre de Recherche pour l'Instrumentalisation du Ciluba http://cric.populus.org/
                                                                                   
                                                                                  
-----
-
 [[Category:Lokótá]]
