--- a/Ciluba.mw
+++ b/Ciluba.mw
@@ -4,8 +4,7 @@
 
 
 == Liens ==
-
-** Centre de Recherche pour l'Instrumentalisation du Ciluba http://cric.populus.org/
+* Centre de Recherche pour l'Instrumentalisation du Ciluba http://cric.populus.org/
                                                                                   
                                                                                  
 [[Category:Lokótá]]
