--- a/Ciluba.mw
+++ b/Ciluba.mw
@@ -1,3 +1,4 @@
+[[Image:Congo-langues.gif|thumb|Description]]
 '''Tshiluba''' (tchiluba,  ciluba) ezali [[lokótá]] na bato na [[Kongo-Kinshasa|Kongo]].
 
 
