*Empty MediaWiki Message*

--- a/Kiswahíli.mw
+++ b/Kiswahíli.mw
@@ -1,4 +1,5 @@
 [[Image:Swahili-pn.jpg|thumb|Description]]
+[[Image:Congo-langues.gif|thumb|Description]]
 
 '''Kiswahili''' ezali [[lokótá]] na bato na [[Kongo-Kinshasa|Kongo]].
 
