*Empty MediaWiki Message*

--- a/Kikɔ́ngɔ.mw
+++ b/Kikɔ́ngɔ.mw
@@ -1,4 +1,5 @@
 [[Image:Kikongo-m.jpg|thumb|Description manque.]] 
+[[Image:Congo-langues.gif|thumb|Description]]
 
 '''Kikongo''' ezali [[lokótá]] na bato na [[Kongo-Kinshasa|Kongo]].
 
