--- a/Lingála.mw
+++ b/Lingála.mw
@@ -1,12 +1,13 @@
 <div style="position:relative;visibility:hidden">---Sidenote START---</div>
 [[Image:Lingala.jpg|thumb|right|description]]
+[[Image:Lingala-pn.jpg|thumb|texte manquant pour exemple de langue.]]
+[[Image:Congo-langues.gif|thumb|Description manquante]]
 
 '''Lingála''' ezali [[lokótá]] na bato na [[Kongo]].
 
 
 
 
-[[Image:Lingala-pn.jpg|thumb|texte manquant pour exemple de langue.]]
 
 
 
