*Empty MediaWiki Message*

--- a/Lingála.mw
+++ b/Lingála.mw
@@ -1,7 +1,7 @@
 <div style="position:relative;visibility:hidden">---Sidenote START---</div>
 [[Image:Lingala.jpg|thumb|right|description]]
 [[Image:Lingala-pn.jpg|thumb|texte manquant pour exemple de langue.]]
-[[Image:Congo-langues.gif|thumb|Description manquante]]
+[[Image:Map_-_DR_Congo,_major_languages.png|thumb|texte manquant pour exemple de langue.]]]]
 
 '''Lingála''' ezali [[lokótá]] na bato na [[Kongo]].
 
