*Empty MediaWiki Message*

--- a/Kikɔ́ngɔ.mw
+++ b/Kikɔ́ngɔ.mw
@@ -1,5 +1,5 @@
 [[Image:Kikongo-m.jpg|thumb|Description manque.]] 
-[[Image:Congo-langues.gif|thumb|Description]]
+[[Image:Map_-_DR_Congo,_major_languages.png|thumb|texte manquant pour exemple de langue.]]
 
 '''Kikongo''' ezali [[lokótá]] na bato na [[Kongo-Kinshasa|Kongo]].
 
