*Empty MediaWiki Message*

--- a/Kiswahíli.mw
+++ b/Kiswahíli.mw
@@ -1,5 +1,5 @@
 [[Image:Swahili-pn.jpg|thumb|Description]]
-[[Image:Congo-langues.gif|thumb|Description]]
+[[Image:Map_-_DR_Congo,_major_languages.png|thumb|texte manquant pour exemple de langue.]]
 
 '''Kiswahili''' ezali [[lokótá]] na bato na [[Kongo-Kinshasa|Kongo]].
 
