*Empty MediaWiki Message*

--- a/Ciluba.mw
+++ b/Ciluba.mw
@@ -1,4 +1,5 @@
-[[Image:Congo-langues.gif|thumb|Description]]
+[[Image:Map_-_DR_Congo,_major_languages.png|thumb|texte manquant pour exemple de langue.]]
+
 '''Tshiluba''' (tchiluba,  ciluba) ezali [[lokótá]] na bato na [[Kongo-Kinshasa|Kongo]].
 
 
@@ -6,6 +7,7 @@
 
 == Liens ==
 * Centre de Recherche pour l'Instrumentalisation du Ciluba http://cric.populus.org/
-                                                                                  
+
+
                                                                                  
 [[Category:Lokótá]]
