--- a/Politíki.mw
+++ b/Politíki.mw
@@ -13,6 +13,9 @@ Nzela ya mibale, [[sosialisimɛ]] ezalí politiki ékopesa matomba ya mosala na 
 === Komynisimɛ ===
 Nzela ya misato, [[komynisimɛ]] ezalí politiki ékosenga bokulaka mpe matomba ya mosala mázala mpɔ na bolamu ya lingomba, kasi ékopekisa bokulaka ya moto mɔkɔ.
 
+===Mokango===
+* [[Demokrasi]]
+
 [[an:Politica]]
 [[ar:سياسة]]
 [[ast:Política]]
