*Empty MediaWiki Message*

--- a/Demokrasi.mw
+++ b/Demokrasi.mw
@@ -3,3 +3,6 @@
 Baye bazali na bokonzi bazui bwango na maboko ma bato ba ekolo, mpe bokonzi bwango bozali mobimba o maboko ma moto moko to mwa liboke lya bato te.
 
 Demokrasi ezali bobele lolenge ya koyangela te, kasi mpe mabongi manso maye makosale 'te tokoka koyangela na lolenge ya demokrasi. Tokotanga mabongi manene manei, maye tokotala lokola makonzi ma demokrasi : bomipesi ya bato banso, botali bato banso lolenge yoko, bonsomi mpe boluki bolamu bwa bato banso.
+
+===Mokango===
+* [[Politiki]]
