*Empty MediaWiki Message*

--- a/Demokrasi.mw
+++ b/Demokrasi.mw
@@ -1,4 +1,6 @@
-'''Demokrasi''' liuti na maloba mabale ma lokota la bagreki : ''demos'' elingi koloba bana ba ekolo; mpe ''kratos'' elingi koloba bokonzi. Demokrasi elingi bongo koloba bokonzi o maboko o bana mboka mpe mpo ya bolamu ya bango.
+[[category:lisangá]]
+
+'''Demokrasi''' liuti na maloba mabale ma lokota la [[bagreki]] : ''demos'' elingi koloba bana ba ekolo; mpe ''kratos'' elingi koloba bokonzi. Demokrasi elingi bongo koloba bokonzi o maboko o bana mboka mpe mpo ya bolamu ya bango.
 
 Baye bazali na bokonzi bazui bwango na maboko ma bato ba ekolo, mpe bokonzi bwango bozali mobimba o maboko ma moto moko to mwa liboke lya bato te.
 
