*Empty MediaWiki Message*

--- a/Politíki.mw
+++ b/Politíki.mw
@@ -2,6 +2,10 @@
 
 '''Politiki''' ezalí bwányá ya koyángela [[likambo|makambo]] ma ekolo lokóla mibeko mizalí kotinda; kobɔngisa [[bomɔi]] ya [[moto|bato]], bizalela ya bangó; kotambwisa misala mia ekolo, mpe koyokana na bikolo bisusu; ezalí sɔlɔ ndimbola ya politiki.
 
+Mwa likebisi litali liloba ''politiki''. Soki toyoki liloba «politiki» to «kosala politiki», tokanisaka nini? Tokanisaka: ''koyiba, kokosa, kosala mabe, kosala mayele''... Kasi politiki ya solo ezali bongo te. Liloba politiki euti na lokota la ba Grec: ''Polis'' elingi [[koloba mboka]], [[engumba]], [[ekolo]]. Politiki ezali mosala to ntoki ya boyangeli mboka to ekolo. Ezali bwanya to mayele ma koyeba boniboni bayangela mokili mwa bato, boniboni bakamba bato ba ekolo na ndenge elingi kosepelisa bato banso.
+
+Yango wana, na mosala mwa politiki, moto akoluka malamu mpo ya ye moko mpenza te, mpo ya libota lya ye te, akoluka se bolamu bwa batu banso lisanga.
+
 Ezalí na mitindo mingi ya politiki, mpe politiki ekabwaní nzela misato:
 
 === Kapitalismɛ ===
@@ -15,6 +19,10 @@ Nzela ya misato, [[komynisimɛ]] ezalí politiki ékosenga bokulaka mpe matomba 
 
 ===Mokango===
 * [[Demokrasi]]
+
+===Botángi===
+* E. Dungia, (1992), Mobutu et l'argent du Zaïre. Révélations d'un diplomate, ex-agent secret, Paris, L'Harmattan, 215 p.
+* C. Braeckman, (1992), Le dinosaure. Le Zaïre de Mobutu, Paris, Fayard, 383 p.
 
 [[an:Politica]]
 [[ar:سياسة]]
