--- a/Demokrasi.mw
+++ b/Demokrasi.mw
@@ -1,10 +1,11 @@
 [[category:lisangá]]
 
-'''Demokrasi''' liuti na maloba mabale ma lokota la [[bagreki]] : ''demos'' elingi koloba bana ba ekolo; mpe ''kratos'' elingi koloba bokonzi. Demokrasi elingi bongo koloba bokonzi o maboko o bana mboka mpe mpo ya bolamu ya bango.
+'''Demokrasi''' liuti na maloba mabale ma [[lokótá la bagrec]]i : ''demos'' elingi koloba bana ba ekolo; mpe ''kratos'' elingi koloba bokonzi. Demokrasi elingi bongo koloba bokonzi o maboko o [[bana mboka]] mpe mpo ya bolamu ya bango.
 
-Baye bazali na bokonzi bazui bwango na maboko ma bato ba ekolo, mpe bokonzi bwango bozali mobimba o maboko ma moto moko to mwa liboke lya bato te.
+Baye bazali na bokonzi bazui bwango na maboko ma bato ba ekolo, mpe bokonzi bwango bozali mobimba o maboko ma moto moko to mwa [[liboka|liboke]] lya bato te.
 
-Demokrasi ezali bobele lolenge ya koyangela te, kasi mpe mabongi manso maye makosale 'te tokoka koyangela na lolenge ya demokrasi. Tokotanga mabongi manene manei, maye tokotala lokola makonzi ma demokrasi : bomipesi ya bato banso, botali bato banso lolenge yoko, bonsomi mpe boluki bolamu bwa bato banso.
+Demokrasi ezali bobele lolenge ya koyangela te, kasi mpe mabongi manso maye makosale 'te tokoka koyangela na lolenge ya demokrasi. Tokotanga mabongi manene manei, maye tokotala lokola makonzi ma demokrasi: bomipesi ya bato banso, botali bato banso lolenge yoko, [[bonsomi]] mpe boluki bolamu bwa bato banso.
 
 ===Mokango===
 * [[Politiki]]
+* [[Lisakoli_ya_molongo_ya_makoki_ya_moto]]
