*Empty MediaWiki Message*

--- a/Politíki.mw
+++ b/Politíki.mw
@@ -19,6 +19,7 @@ Nzela ya misato, [[komynisimɛ]] ezalí politiki ékosenga bokulaka mpe matomba 
 
 ===Mokango===
 * [[Demokrasi]]
+* [[Lisakoli ya molongo ya makoki ya moto]]
 
 ===Botángi===
 * E. Dungia, (1992), Mobutu et l'argent du Zaïre. Révélations d'un diplomate, ex-agent secret, Paris, L'Harmattan, 215 p.
