*Empty MediaWiki Message*

--- a/Lisakoli_ya_molongo_ya_makoki_ya_moto.mw
+++ b/Lisakoli_ya_molongo_ya_makoki_ya_moto.mw
@@ -131,3 +131,19 @@ Makoki pe bonsomi yango ekoki, ata moke te, kozala esongo na masengi ya Lisanga 
 
 ==Eténi ya 30==
 Mobeko ata moko te ya Lisanga oyo ekoki kozala po na Leta, na lisanga ya bato, to na moto, likoki ya kosala likambo oyo ekonyata makoki pe bonsomi awa.
+
+[[cs:Všeobecná deklarace lidských práv]] 
+[[de:Allgemeine Erklärung der Menschenrechte]] 
+[[en:Universal Declaration of Human Rights]] 
+[[es:Declaración Universal de los Derechos Humanos]] 
+[[eo:Universala Deklaracio de Homaj Rajtoj]] 
+[[fy:Universele Ferklearring fan de Rjochten fan de Minske]] 
+[[it:Dichiarazione Universale dei Diritti dell'Uomo]] 
+[[he:ההכרזה לכל באי עולם בדבר זכויות האדם]] 
+[[minnan:Sè-kài Jîn-koân Soan-giân]] 
+[[nl:Universele Verklaring van de Rechten van de Mens]] 
+[[no:Menneskerettighetserklæringen]] 
+[[pl:Powszechna Deklaracja Praw Człowieka]] 
+[[pt:Declaração Universal dos Direitos Humanos]] 
+[[ro:Declaraţia Universală a Drepturilor Omului]] 
+[[ru:Декларация прав человека]] [[zh:世界人权宣言]]
