--- a/Lisakoli_ya_molongo_ya_makoki_ya_moto.mw
+++ b/Lisakoli_ya_molongo_ya_makoki_ya_moto.mw
@@ -136,7 +136,8 @@ Mobeko ata moko te ya Lisanga oyo ekoki kozala po na Leta, na lisanga ya bato, t
 [[de:Allgemeine Erklärung der Menschenrechte]] 
 [[en:Universal Declaration of Human Rights]] 
 [[es:Declaración Universal de los Derechos Humanos]] 
-[[eo:Universala Deklaracio de Homaj Rajtoj]] 
+[[eo:Universala Deklaracio de Homaj Rajtoj]]
+[[fr:Déclaration universelle des droits de l'homme]]
 [[fy:Universele Ferklearring fan de Rjochten fan de Minske]] 
 [[it:Dichiarazione Universale dei Diritti dell'Uomo]] 
 [[he:ההכרזה לכל באי עולם בדבר זכויות האדם]] 
