--- a/Nkɔ́si.mw
+++ b/Nkɔ́si.mw
@@ -1,9 +1,7 @@
 [[image:Loewe-painting.jpg|thumb|180px|right|Kenia; in: Brehms Tierleben, 1927]]
 [[image:Lightmatter_lioness.jpg|thumb|180px|right|Nkosi]]
 
-
-
-
+'''Nkosi''' ezali [[nyama]] ya [[esóbé]].
 
 [[Category:Niama]]
 
