*Empty MediaWiki Message*

--- a/Bozinga.mw
+++ b/Bozinga.mw
@@ -1,7 +1,7 @@
-'''Bulé''' ezali [[lángi]] ya [[likoló]].
+'''Bulé''', buló, ezali [[lángi]] ya [[likoló]].
 
 <div style="height:3cm;background-color:#00f;margin-left:2cm;margin-right:2cm"> </div>
 
-[[af:Blou (kleur)]] [[ca:Blau]] [[cs:Modrá]] [[da:Blå]] [[de:Blau]] [[el:Μπλέ]] [[en:Blue]] [[es:Azul]] [[eo:Blua]] [[it:Blu]] [[he:כחול]] [[ms:Biru]] [[nl:Blauw]] [[ja:青]] [[no:Blå]] [[pt:Azul]] [[simple:Blue]] [[fi:Sininen]] [[sv:Blå]]
+[[af:Blou (kleur)]] [[ca:Blau]] [[cs:Modrá]] [[da:Blå]] [[de:Blau]] [[el:Μπλέ]] [[en:Blue]] [[es:Azul]] [[eo:Blua]] [[fr:Bleu]] [[it:Blu]] [[he:כחול]] [[ms:Biru]] [[nl:Blauw]] [[ja:青]] [[no:Blå]] [[pt:Azul]] [[simple:Blue]] [[fi:Sininen]] [[sv:Blå]]
 
 [[Category:lángi]]
