--- a/Kongo.mw
+++ b/Kongo.mw
@@ -1,3 +1,3 @@
 * [[Kongó-Brazzaville]] (République du Congo, ex République populaire du Congo, ex Congo français)
-* [[Kongo-Kinshasa]] (République Démocratique du Congo, ex Zaïre, ex Congo belge, ex État du Congo libre)
+* [[Kongó-Kinshasa]] (République Démocratique du Congo, ex Zaïre, ex Congo belge, ex État du Congo libre)
 * [[Kongó (ebale)]]
