/* Mpona kokóma «ekolo moyindo molakisa nzela» */

--- a/Ntángo_ya_banɔ́kɔ́_(Kongó-Kinsásá).mw
+++ b/Ntángo_ya_banɔ́kɔ́_(Kongó-Kinsásá).mw
@@ -18,6 +18,8 @@ Na bokambami bwa Belgica, ekolo État Indépendant du Congo ekomi lokola mabele 
 
 image:cskatangatcongobel1950a.jpg
 
+image:cskatangatcongobel1950a.jpg
+
 == Mpona kokóma «ekolo moyindo molakisa nzela» ==
 Ekambi miyindo na mindele ekopesa ndakisa, ebongi esala mabe te. Elingaki bokondzi ya botata esimbi Bruxelles mpona bokambi ya miyindo ezala malamu, ekolo emikoka bozwi bwa ye. Kasi etiki na miyindo, manso etali mbulamatari te lokola botei bana ba kelasi, botongi ekolo mpe mosala ya monganga. 
 
