/* Mpona kokóma «ekolo moyindo molakisa nzela» */

--- a/Ntángo_ya_banɔ́kɔ́_(Kongó-Kinsásá).mw
+++ b/Ntángo_ya_banɔ́kɔ́_(Kongó-Kinsásá).mw
@@ -22,6 +22,7 @@ image:cskatangatcongobel1950a.jpg
 
 [[Image:cskatangatcongobel1950a.jpg]]
 == Mpona kokóma «ekolo moyindo molakisa nzela» ==
+[[Image:CSKatangaTCongoBel1950a.jpg]]
 Ekambi miyindo na mindele ekopesa ndakisa, ebongi esala mabe te. Elingaki bokondzi ya botata esimbi Bruxelles mpona bokambi ya miyindo ezala malamu, ekolo emikoka bozwi bwa ye. Kasi etiki na miyindo, manso etali mbulamatari te lokola botei bana ba kelasi, botongi ekolo mpe mosala ya monganga. 
 
 Bokambi yango ezalaki mpe na makambo ya makasi. Ata mibeko mikokumbisa bikolo ya miyindo miye ekambi ekolo Kongo ya Belgica, mosala ya bokasi ekosila kaka na mobu koto na kama libwa na tuku misato. Bakopesa bonyile na bapanzi makita mpe na bisanga bya bato kaka na mobu koto na kama libwa na tuku mitano na libwa. Na mibu koto na kama libwa na tuku mitano, posa ya kotombola ekolo ekopesa makanisi ya ekolo Kongo ndakisa malamu. Na tema ya mabe te, bisika bya ekolo Kongo na emoneli ya mokili mobimba ya mobu koto na kama libwa na tuku mitano na mwambe, epesaki maloba ya elikya enene.
