--- a/Kongó-Kinshasa.mw
+++ b/Kongó-Kinshasa.mw
@@ -4,7 +4,7 @@
 | style="background:#efefef;" align="center" colspan="2" |
 {| border="0" cellpadding="2" cellspacing="0"
 |-----
-| align="center" width="140px" | [[Image:Congo_democratic_flag_medium.png]]
+| align="center" width="140px" | [[Image:Congo democratic flag 300.png|thumb]]
 |-----
 | align="center" width="140px" | ([[Drapeau du Congo|Détails]])
 |}
