*Empty MediaWiki Message*

--- a/Kongó-Kinshasa.mw
+++ b/Kongó-Kinshasa.mw
@@ -29,7 +29,7 @@
 | [[Liste des pays par population|Classé 23{{e}}]]<br /> 55 225 478 habitants<br /> 24 hab./km²
 |-----
 | [[Indépendance]]<br />&nbsp;- Date
-| de la [[Belgique]]<br />[[30 juin]] [[1960]]
+| de la [[Belgica]]<br />[[30 juin]] [[1960]]
 |-----
 | [[Mfalánga]] || [[Franc Congolais]]
 |-----
