/* Ndenge nini tokoki komikebisa na ngenge ya sida? */

--- a/Sidá.mw
+++ b/Sidá.mw
@@ -26,4 +26,4 @@ Sima ya bokoteli bwa ngenge o nzoto, tokoki kopesa ngenge ena na moto mosusu. Ng
 *to ntango ya komelisa mwana mabele.
 
 === Ndenge nini tokoki komikebisa na ngenge ya sida? ===
-Ntango ya botamboli ya mwasi na mobali: Kaka nde ekanga ekoki [[kopekisa]] ''ngenge ya sida''. Tokoki kosomba ebateli na bisika biyike: esika batekaka nkisi, makaya masanga.
+Ntango ya botamboli ya mwasi na mobali: Kaka nde ekanga ekoki [[ekopekisa|kopekisa]] ''ngenge ya sida''. Tokoki kosomba ebateli na bisika biyike: esika batekaka nkisi, makaya masanga.
