--- a/Sidá.mw
+++ b/Sidá.mw
@@ -1,4 +1,5 @@
 [[category:bokɔnɔ]]
+[[category:sida]]
 [[Image:Sida-repartition.png|thumb|400px|Estimation de la répartition des personnes séropositives fin 2003]] 
 
 '''Sida''' ('''S'''yndrome d''''i'''mmuno'''d'''éficience '''a'''cquise) epesamaka na [[ngenge]].
