*Empty MediaWiki Message*

--- a/Kapɔ́ti.mw
+++ b/Kapɔ́ti.mw
@@ -2,7 +2,7 @@
 
 Ntango ya botamboli ya mwasi na mobali: Kaka nde ekanga ekoki '''ekopekisa''' ngenge ya sida. Tokoki kosomba ebateli na bisika biyike: esika batekaka nkisi, makaya masanga.
 
-Ebateli ekopekisa nzoto na biso ekoto ngenge ya [[sida]], mpe ezwa [[bokono]] boye bozwamaka ya mwasi na mobali. Ebateli ekopekisa mpe mwasi azwa zemi ntango alingi te.
+Ebateli ekopekisa nzoto na biso ekoto ngenge ya [[sida]], mpe ezwa [[bokɔnɔ]] boye bozwamaka ya mwasi na mobali. Ebateli ekopekisa mpe mwasi azwa zemi ntango alingi te.
 
 '''Bolamu bwa ekanga bozali na tembe te.'''
 
