*Empty MediaWiki Message*

--- a/Kapɔ́ti.mw
+++ b/Kapɔ́ti.mw
@@ -1,4 +1,5 @@
 [[category:sida]]
+[[Ndenge ya kolata mpe kosalela ekanga]]
 
 Ntango ya botamboli ya mwasi na mobali: Kaka nde ekanga ekoki '''ekopekisa''' ngenge ya sida. Tokoki kosomba ebateli na bisika biyike: esika batekaka nkisi, makaya masanga.
 
