*Empty MediaWiki Message*

--- a/Ekopekisa_(Ndenge).mw
+++ b/Ekopekisa_(Ndenge).mw
@@ -1,6 +1,6 @@
 [[category:bokɔnɔ]]
 [[category:sida]]
-Ntango ya botamboli ya mwasi na mobali: Kaka nde ekanga ekoki [['''ekopekisa''']] ngenge ya [[sida]]. Tokoki kosomba ebateli na bisika biyike: esika batekaka nkisi, makaya masanga. [[
+Ntango ya botamboli ya mwasi na mobali: Kaka nde ekanga ekoki '''[[ekopekisa]]''' ngenge ya [[sida]]. Tokoki kosomba ebateli na bisika biyike: esika batekaka nkisi, makaya masanga.
 
 Ndenge ya kolata mpe kosalela
 
