--- a/Kapɔ́ti.mw
+++ b/Kapɔ́ti.mw
@@ -1,3 +1,4 @@
+[[image:Kondom_gruen.jpg|thumb|Ekopikesa]]
 [[category:bokɔnɔ]]
 [[category:sida]]
 [[Ekopekisa (Ndenge)|Ndenge ya kolata mpe kosalela ekanga]]
