*Empty MediaWiki Message*

--- a/Kapɔ́ti.mw
+++ b/Kapɔ́ti.mw
@@ -1,4 +1,4 @@
-[[image:Kondom_gruen.jpg|thumb|Ekopikesa]]
+[[image:preservatif1.jpg|thumb|Ekopikesa]]
 [[category:bokɔnɔ]]
 [[category:sida]]
 [[Ekopekisa (Ndenge)|Ndenge ya kolata mpe kosalela ekanga]]
