--- a/Ekopekisa_(Ndenge).mw
+++ b/Ekopekisa_(Ndenge).mw
@@ -1,3 +1,4 @@
+[[image:preservatif-emploi.jpg|70px|left|Ekopikesa]]
 [[category:bokɔnɔ]]
 [[category:sida]]
 Ntango ya botamboli ya mwasi na mobali: Kaka nde ekanga ekoki '''[[ekopekisa]]''' ngenge ya [[sida]]. Tokoki kosomba ebateli na bisika biyike: esika batekaka nkisi, makaya masanga.
@@ -14,4 +15,5 @@ Ndenge ya kolata mpe kosalela
 
 * Sima ya bolongoli ekanga, bwaka yango na ekolo  ya bosoto.
 
- Esengami kotiya ekanga na bisika bya mwa mpio mpe ya koyoma, esika mwinda to moyi makasi mozangi, pamba te ekobeba.
+ Esengami kotiya ekanga na bisika bya mwa mpio mpe ya koyoma,
+ esika mwinda to moyi makasi mozangi, pamba te ekobeba.
