*Empty MediaWiki Message*

--- a/Sidá.mw
+++ b/Sidá.mw
@@ -1,3 +1,4 @@
+[[category:boyebi mosala ya mónganga]]
 [[category:bokɔnɔ]]
 [[category:sida]]
 [[Image:Sida-repartition.png|thumb|400px|Estimation de la répartition des personnes séropositives fin 2003]] 
