*Empty MediaWiki Message*

--- a/Kapɔ́ti.mw
+++ b/Kapɔ́ti.mw
@@ -1,5 +1,5 @@
 [[image:preservatif1.jpg|thumb|Ekopikesa]]
-[[category:bokɔnɔ]]
+[[category:boyebi mosala ya mónganga]]
 [[category:sida]]
 [[Ekopekisa (Ndenge)|Ndenge ya kolata mpe kosalela ekanga]]
 
