*Empty MediaWiki Message*

--- a/Ekopekisa_(Ndenge).mw
+++ b/Ekopekisa_(Ndenge).mw
@@ -1,4 +1,4 @@
-[[image:preservatif-emploi.jpg|70px|left|Ekopikesa]]
+[[image:preservatif-emploi.jpg|70px|left|thumb|Ekopikesa]]
 [[category:boyebi mosala ya mónganga]]
 [[category:sida]]
 Ntango ya botamboli ya mwasi na mobali: Kaka nde ekanga ekoki '''[[ekopekisa]]''' ngenge ya [[sida]]. Tokoki kosomba ebateli na bisika biyike: esika batekaka nkisi, makaya masanga.
