--- a/Kongó-Kinshasa.mw
+++ b/Kongó-Kinshasa.mw
@@ -1,5 +1,5 @@
 {| border="1" cellpadding="2" cellspacing="0" align="right" width="300px"
-|+ <font size="+1">'''Kongo Demokratiki'''</font>
+|+ <font size="+1">'''Kongó Demokratiki'''</font>
 |-----
 | style="background:#efefef;" align="center" colspan="2" |
 {| border="0" cellpadding="2" cellspacing="0"
@@ -20,7 +20,7 @@
 |-----
 | [[Mboka-mokonzi]] || [[Kinshasa]]
 |-----
-| [[Kongo Demokratiki (Tata-mokonzi)|Tata-mokonzi]] || [[Joseph Kabila]]
+| [[Kongó Demokratiki (Tata-mokonzi)|Tata-mokonzi]] || [[Joseph Kabila]]
 |-----
 | [[Etando]] <br />&nbsp;- ekokí <br />&nbsp;- % mai
 | [[Liste des pays par superficie|Classé 12{{e}}]]<br /> 2 345 410 [[kilomètre carré|km²]]<br /> 3.3%              
@@ -49,7 +49,7 @@
 
 == Lakótá ==
 
-Na ekolo Kongo elobami [[lakótá|bakótá]] kama mibale. Nyoso wana elakisi boyebi bwa bato ya bomengo etondi mabele. [[Tshiluba]], [[kikongo]], [[lingála]] mpe [[kiswahili]] ezali bakota banene banei ya ekolo, kasi bakota kama mibale balobaka na ekolo Kongo.
+Na ekolo Kongó elobami [[lakótá|bakótá]] kama mibale. Nyoso wana elakisi boyebi bwa bato ya bomengo etondi mabele. [[Tshiluba]], [[kikongo]], [[lingála]] mpe [[kiswahili]] ezali bakota banene banei ya ekolo, kasi bakota kama mibale balobaka na ekolo Kongó.
 
 Mingi se na kati ya bakota bya ekolo bokoyeba etando ya bikela, mabele, banyama mpe banzete.
 
@@ -106,18 +106,18 @@ Na kati ya boswani bwa bango, ekolo Belgica akolanda bosungi bwa ye na ekolo Kon
 
 == Bikela ==
 
-Ekolo Kongo Demokratiki ekenda sango mokili mobimba mpona biloko bya mabele mwaye. Ya solo ekolo moko lisusu te na Afrika akokani naye na banyama mpe zamba ndenge na ndenge.
+Ekolo Kongó Demokratiki ekenda sango mokili mobimba mpona biloko bya mabele mwaye. Ya solo ekolo moko lisusu te na Afrika akokani naye na banyama mpe zamba ndenge na ndenge.
 
 === Zamba na banyama : bobateli bwa bikela o kati ya zamba ya leta ===
 
 Banganga mayele batangi ndenge 11000 ya banzete, 409 ya banyama ya mabele, 1086 ya bandeke, 1069 ya mbisi mpe 152 ya banyoka. Bokozwa te na ekolo esusu ya Afrika banzete mpe banyama etangami ndenge na ndenge.
-* Na ekolo Kongo, bokozwa bangomba, bisobe, bibale, babweta na bangomba moto; bokozwa mpe zamba ndenge mingi lokola zamba ya mokili mwa molunge, nzete ya bozangi mai, bisobe mpe bikombo.
-* Banyama ya seko baye bavandaka nse wana, lokola mondonga, bonobo, lokulokoko lwa Kongo, mpe gambala ya mai. Soki tobebisi zamba na bango, bakolimwa elongo.
+* Na ekolo Kongó, bokozwa bangomba, bisobe, bibale, babweta na bangomba moto; bokozwa mpe zamba ndenge mingi lokola zamba ya mokili mwa molunge, nzete ya bozangi mai, bisobe mpe bikombo.
+* Banyama ya seko baye bavandaka nse wana, lokola mondonga, bonobo, lokulokoko lwa Kongó, mpe gambala ya mai. Soki tobebisi zamba na bango, bakolimwa elongo.
 
 === Bikela bikopesa biloko bya kobongola ===
-Mbongo ekotisa ba nzete mpe mabanga ya talo ezali na esika enene na kati ya ekolo Kongo.
+Mbongo ekotisa ba nzete mpe mabanga ya talo ezali na esika enene na kati ya ekolo Kongó.
 
-* Mabele o ekolo Kongo etondi mabanga ya talo lokola wolo, kobalti, etani, koltani, jemanyu, diama, mbongo, mbengi, etc.
+* Mabele o ekolo Kongó etondi mabanga ya talo lokola wolo, kobalti, etani, koltani, jemanyu, diama, mbongo, mbengi, etc.
 
 Na tango ya kala, mabanga masusu mazalaki na tina te. Lelo tina na bango tembe nye. Lokola koltani ebwakamaki lokola bosoto bwa etani. Lelo, mosala ya elektroniki esengi tantalu, mpe na mikolo mya lelo, balokotaka bandambo ya etani mpona kobongola.
 
