--- a/Kongó-Kinshasa.mw
+++ b/Kongó-Kinshasa.mw
@@ -13,10 +13,10 @@
 |-----
 | align="center" colspan="2" | [[image:LocationDRCongo.png|200px|]]
 |-----
-| [[Langue officielle]] || [[Langue française|français]]
+| [[Lokótá officielle]] || [[lifalasɛ́]]
 |-----
-| Langues nationales  
-| [[lingála]], [[kiswahili]],<br />[[tshiluba]], [[kikongo]]
+| Bakótá na mbóka
+| [[Lingála]], [[Kiswahili]],<br />[[Tshiluba]], [[Kikongo]]
 |-----
 | [[Mboka-mokonzi]] || [[Kinshasa]]
 |-----
@@ -47,9 +47,9 @@
 |}
 
 
-== Lakótá ==
+== Lokótá ==
 
-Na ekolo Kongó elobami [[lakótá|bakótá]] kama mibale. Nyoso wana elakisi boyebi bwa bato ya bomengo etondi mabele. [[Tshiluba]], [[kikongo]], [[lingála]] mpe [[kiswahili]] ezali bakota banene banei ya ekolo, kasi bakota kama mibale balobaka na ekolo Kongó.
+Na ekolo Kongó elobami [[lokótá|bakótá]] kama mibale. Nyoso wana elakisi boyebi bwa bato ya bomengo etondi mabele. [[Tshiluba]], [[kikongo]], [[lingála]] mpe [[kiswahili]] ezali bakota banene banei ya ekolo, kasi bakota kama mibale balobaka na ekolo Kongó.
 
 Mingi se na kati ya bakota bya ekolo bokoyeba etando ya bikela, mabele, banyama mpe banzete.
 
