*Empty MediaWiki Message*

--- a/Lingála.mw
+++ b/Lingála.mw
@@ -1,5 +1,5 @@
 <div style="position:relative;visibility:hidden">---Sidenote START---</div>
-[[Image:LanguageMap-Lingala-Location.png|thumb|right|description]]
+[[Image:LanguageMap-Lingala-Larger Location.png|thumb|right|description]]
 [[Image:Lingala-pn.jpg|thumb|texte manquant pour exemple de langue.]]
 [[Image:Map_-_DR_Congo,_major_languages.png|thumb|texte manquant pour exemple de langue.]]
 
